# BitVMX-CPU

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
_coin/compliance_tests/: Dockerfile  README.md  build.sh  build_all.sh  build_mul.sh  docker-run-coin-compliance.sh  riscv_test.h  run_tests.sh
_coin/compliance_tests/isa/macros/scalar/: test_macros.h
_coin/compliance_tests/isa/rv32ui/: add_enhanced.S  beq_enhanced.S  compare_enhanced.S  immediate_enhanced.S  jalr_enhanced.S
_coin/compliance_tests/isa/rv32um/: div_enhanced.S  mul_enhanced.S  rem_enhanced.S
_coin/compliance_tests/linker/: link.ld
_coin/reference_tests/: README.md  docker-build.sh  docker-run-qemu.sh  prove_verify_elfs.sh  test_elfs.sh
_coin/reference_tests/aes256/: README.md  aes256.c  aes256.yaml  convert_vectors.py  test_vectors_var_key.txt  test_vectors_var_pt.txt
_coin/reference_tests/chacha/: ChaCha20.h  README.md  chacha_test.c  chacha_test.yaml  parse_chacha_tests.py  test_vectors.h
_coin/reference_tests/crc32/: README.md  crc32.c  crc32_test.c  crc32_test.yaml  generate_crc32_vectors.py  test_vectors.h
_coin/reference_tests/ecdsa/: README.md  ecdsa.c  ecdsa.yaml  p256.c  p256.h  parse_ecdsa_rsp.py  test_vectors.h
_coin/reference_tests/fibonacci/: fibonacci.c  fibonacci.yaml
_coin/reference_tests/quicksort/: README.md  install.sh  quicksort_test.c  quicksort_test.yaml
_coin/reference_tests/sha256/: README.md  generate_vectors.py  sha256.c  sha256.yaml  test_vectors.h
_coin/reference_tests/sha3/: README.md  parse_sha3_rsp.py  sha3.c  sha3.yaml
bitcoin-script-riscv/: Cargo.toml
bitcoin-script-riscv/src/: lib.rs  main.rs
bitcoin-script-riscv/src/riscv/: challenges.rs  decoder.rs  instruction_mapping.rs  instructions.rs  instructions_load.rs  instructions_store.rs  memory_alignment.rs  mod.rs  operations.rs  script_utils.rs  trace.rs
decision/: Cargo.toml
decision/src/: lib.rs
definitions/: Cargo.toml
definitions/src/: challenge.rs  lib.rs  memory.rs  program_definition.rs  trace.rs
docker-riscv32/: Dockerfile  README.md  build.sh  build_with_m.sh  docker-build-mac.sh  docker-build.bat  docker-build.sh  docker-run.bat  docker-run.sh  emulator.h  entrypoint.s  hello-world.c  hello-world.elf  link.ld  plainc.c  run.bat  run.sh  run_and_build.bat  test-build.bat  test-build.sh
docker-riscv32/compliance/: Dockerfile  README.md  build.sh  build_all.sh  build_mul.sh  link.ld  run.bat
docker-riscv32/riscv32/: Docker.arch  Dockerfile  build.sh
docker-riscv32/src/: emulator.h  entrypoint.s  plainc.c  test_input.c
docker-riscv32/test/: Dockerfile  build.bat  run.bat
docker-riscv32/verifier/: Dockerfile  Dockerfile.mul  README.md  build.bat  build.sh  build_mul.bat  link.ld  run.bat  run_and_build.bat  sample_input.hex  zkverifier
emulator/: Cargo.toml
emulator/src/: lib.rs  main.rs
emulator/src/decision/: challenge.rs  execution_log.rs  mod.rs  nary_search.rs
emulator/src/executor/: alignment_masks.rs  fetcher.rs  mod.rs  trace.rs  utils.rs  validator.rs  verifier.rs
emulator/src/loader/: mod.rs  program.rs  program_definition.rs
emulator/tests/: README.md  audit.rs  challenge.rs  compliance.rs  exceptions.rs  test_b_type_instructions.rs  test_i_type_instructions.rs  test_instructions.rs  test_j_type_instructions.rs  test_r_type_instructions.rs  test_s_type_instructions.rs  test_u_type_instructions.rs
emulator/tests/common/: mod.rs
emulator/tests/utils/: common.rs
