[package]
name = "bitcoin-script-riscv"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack", features = [
    "interactive",
], branch = "merge-bitvm" }
bitcoin-script-functions = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-functions", branch = "merge-bitvm" }
bitcoin = "=0.32.6"
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch = "merge-bitvm" }
riscv-decode = "0.2.1"
thiserror = "1.0.61"
bitvmx-cpu-definitions = { path = "../definitions" }
serde = "1.0.219"
rand = "0.9.2"
rand_pcg = "0.9.0"
hex = "0.4.3"
blake3 = "1.8.2"
