[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.4"
riscv-decode = "0.2.1"
hex = "0.4.2"
thiserror = "1.0.61"
sha2 = "0.10.8"

[dev-dependencies]
rstest = "0.19.0"
#cargo-tarpaulin = "0.30.0"
