[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.4"
riscv-decode = "0.2.1"
hex = "0.4.3"
thiserror = "1.0.61"
sha2 = "0.10.8"
bitcoin-script-riscv = { path = "../bitcoin-script-riscv" }
clap = "4.5.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5.1"

[dev-dependencies]
rstest = "0.21.0"
rand = "0.8"
#cargo-tarpaulin = "0.30.0"
