[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.4"
riscv-decode = "0.2.1"
hex = "0.4.3"
thiserror = "1.0.61"
blake3 = "1.6.1"
bitcoin-script-riscv = { path = "../bitcoin-script-riscv" }
bitvmx-cpu-definitions = { path = "../definitions" }
clap = "4.5.8"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

num-traits = "0.2"

config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5.1"

strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
rstest = "0.25.0"
rand = "0.8"
#cargo-tarpaulin = "0.30.0"
